# VS-Setup-Tools

./: .gitignore  .gitmodules  AppCMakeLists.txt  CMakeLists.txt  CMakeListsApp.txt  CMakeListsCore.txt  CMakeListsCoreLib.txt  CoreCMakeLists .txt  Instrumentor.cpp  Instrumentor.h  Instrumentor.hpp  ProjC.bat  ProjType.bat  README.md  base.cpp  c_cpp_properties.json  cdrnew.bat  cdropen.bat  cproj.bat  pch.h  pch.hpp
